# CryptoBoom

./: README.md  cahier_des_charges_ameliore.docx  docker-compose.yml
CryptoVisualizer/: README.md  angular.json  package-lock.json  package.json
CryptoVisualizer/src/: index.html  styles.scss
CryptoVisualizer/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
CryptoVisualizer/src/app/components/footer/: footer.component.html  footer.component.scss
CryptoVisualizer/src/app/components/navbar/: navbar.component.html  navbar.component.scss  navbar.component.ts
CryptoVisualizer/src/app/pages/articles/: articles.component.html  (+2 more)
CryptoVisualizer/src/assets/: navbar-animation.js
api/: README.md  api.py
htmlpages/: article.html  journalducoin.html
ms_scraper/: alembic.ini  dependencies.py  pyproject.toml
ms_scraper/alembic/: env.py
ms_scraper/alembic/versions/: 096403377609_add_site_url_table.py  31ee2c027147_add.py  3db1fc90649f_create_articles_table.py  5bb52f8e52e0_create_articles_analyses_table.py  6404573fc567_add_table.py  702ba07c9759_add_site_url_table.py  71bb1f59eee5_add_site_url_table.py  b13493bf345a_add_date_analyse_to_articles_analyses.py  c372f76240d1_create_articles_analyses_table.py  f8bfba7a1f71_add_table.py
ms_scraper/analyses/: __init__.py  analyzer.py
ms_scraper/models/: __init__.py  analyse_article.py  articles.py  sites.py  user.py
ms_scraper/routes/: auth.py
ms_scraper/schemas/: user.py
ms_scraper/scrapper/: db.py  scraping_methods.py  scrapper.py
ms_scraper/utils/: security.py
(+7 files in other folders)
