[project]
name = "ms-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "ADRIEN RATEAU", email = "adrien.rateau@epitech.eu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "alembic (>=1.15.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "scrapper" },
    { include = "models" }
]
